--- a/style2.css
+++ b/style2.css
@@ -1,18 +1,39 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
+#Geschiedenis {
+  background: linear-gradient(270deg, #fffa00, #ff0000);
+  background-size: 400% 400%;
+  font-family: 'Ubuntu';
+  animation: AnimationName 30s ease infinite;
+
+}
+
+#badges {
+  background: linear-gradient(270deg, #00ff85, #67ff00);
+  background-size: 400% 400%;
+  font-family: 'Ubuntu';
+  animation: AnimationName 30s ease infinite;
+}
 
 body {
   font-family: 'Ubuntu';
-  background: linear-gradient(271deg, #0308ff, #0399ff, #03ffa8, #03ff23);
-  background-size: 800% 800%;
-  animation: background-gradient 10s ease infinite;
+  background: linear-gradient(270deg, #0081ff, #00fff6);
+  background-size: 400% 400%;
+  animation: AnimationName 30s ease infinite;
 }
 
 h1 {
   text-align: center;
   font-size: 100px;
-  margin-top: 150px;
   margin-bottom: 0px;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+p {
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 90px;
   font-weight: bold;
 }
 
@@ -20,6 +41,10 @@ h2 {
   font-family: 'Ubuntu';
   text-align: center;
   margin-top: 0px;
+}
+
+iframe {
+  margin-left: 400px;
 }
 
 .sidenav {
@@ -62,13 +87,20 @@ h2 {
   padding: 16px;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+#mySidenav {
+  position: fixed;
 }
 
-@keyframes background-gradient {
+.badge {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 40px;
+  font-weight: bold;
+
+}
+
+@keyframes AnimationName {
     0%{background-position:0% 50%}
-    50%{background-position:100% 51%}
+    50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
